--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/pixel_logo.ico">
+  <meta name="description" content="This is Jordan's resume website.">
+  <meta name="author" content="862225783">
 
-  <title>John Doe - Business Administration</title>
+  <title>Jordan Anderson - Advertising</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Jordan Anderson</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/jordananderson.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,28 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Jordan Anderson
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">My name is Jordan Anderson. I was born in Riverside county California but due to my father’s service in the military I was moved around a lot. My brother was born in Germany the year before I was born. After that I have lived in Hawaii, Illinois and Georgia. Those places each have their own charms but I do have a certain fondness for California. Since 2017 I haven’t had to move. I don’t regret having to move so much but it has been great since I am going to college and would like to be stable.<br><br>
 
-        Enter bio here<br><br>
+         I graduated June of 2020 from Perris High School, in California. Previously, I was homeschooled for five years and very nervous about rejoining other students in-person but I was able to adjust and graduated with a 4.0 GPA. In Fall of 2020, I started college at the University of California Riverside to study Business. I'll be deciding my concentration by the end of my second year. After I receive my bachelor's degree I will think about getting higher degrees. If I see it necessary in my career later on it would be my best choice. I hope to work in a marketing position with some emphasis on advertisement and strategies. I became interested in the subject after reading about the psychology and strategies used in stores and their layout. There are many ways stores convince you to buy from them. Whether it’s the lighting, the size of the aisles, colors, scents, prices, etc. I would like to be involved in something like that.<br><br>
 
-        Enter bio here
+        During high school I was involved with the Yearbook and Journalism club for three years. I ranked from photographer, reporter, Vice President, junior editor, to Editor In Chief by my senior year. As Editor In Chief I maintained my school’s $3,000 contract with Jostens to complete a fully written yearbook. I led others to cover events and clubs at the school and taught others how to use the DSLRs. Not only did I write articles but I also designed the exterior  and interior layout of the book with the help of my teammates and the representatives of Jostens. During my junior and senior year I interned with Think Together. I performed various tasks with the Older Youth Leaders such as organizing events to advertise after school activities, tutoring English homework in the library, or taking attendance of the students staying after school. <br><br>
+        
+        My other interests include photography and drawing and design. During high school I became pretty skilled at using the camera, specifically a Canon T6i. For events, I took informative and composed pictures. The most difficult subjects were the sports games. As anyone can imagine, it's not easy to capture an intense action shot with minimal blurring and decent composition. Capturing the candid expressions of others was my favorite part. That same idea goes for when I’m drawing. I like to capture a face that is deep in thought or calm. Learning to draw different expressions is difficult but I enjoy practicing whenever I can.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://edu.gcfglobal.org/en/linkedin/creating-a-linkedin-account/1/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/jordananderson-783">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://business.twitter.com/en/basics.html">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:jande101@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +94,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Yearbook Editor-In-Chief</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.jostens.com/">Jostens</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Experience with publishing<br> 
+              • Journalism and Photography skills<br>
+              • Use of Adobe Lightroom and Photoshop <br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">August 2017 - June 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Intern</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://thinktogether.org/">Think Together</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              •Advertising and Event planning<br>
+              • Tutoring English<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August 2018 - March 2020</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Member</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.nhs.us/">National Honor Society</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Study groups<br>
+            • Campus cleanup<br>
+            • Frequent community service<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary"> October 2017 - June 2020</span>
           </div>
         </div>
 
@@ -152,33 +153,21 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelor's Degree in Business Administration</div>
+            <div>Marketing</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary"> June 2024</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Perris HIgh School</h3>
+            <div class="subheading mb-3">Diploma</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">June 2020</span>
           </div>
         </div>
 
@@ -191,7 +180,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/2020_yearbook.jpg" width="500px">
+            <img src="img/img1803.JPG" width="500px"><br>
+            <img src="img/WREP.jpg" width="500px">
+            <img src="img/certificate.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +191,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Jordan Anderson</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
